--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-#.idea/workspace.xml
+.idea/workspace.xml
 .idea/tasks.xml
-#.idea/dictionaries
-#.idea/vcs.xml
+.idea/dictionaries
+.idea/vcs.xml
 .idea/jsLibraryMappings.xml
 
 # For currenly project
