--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,15 @@
 # User-specific stuff:
 #.idea/workspace.xml
 .idea/tasks.xml
-#.idea/dictionaries
-#.idea/vcs.xml
+.idea/dictionaries
+.idea/vcs.xml
 .idea/jsLibraryMappings.xml
 
 # For currenly project
 # .gitignore
-# .idea/
- #.ruby-gemset
- #.ruby-version
+ .idea/
+.ruby-gemset
+.ruby-version
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
